--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: anchovy's website
 email: anchovymath@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- personal website for anchovy
+ home
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  anchovydev
