--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: anchovy's website
-description: >- # this means to ignore newlines until "baseurl:"
-a funny and creative description
+description: a funny and creative description
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  anchovydev
