--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: anchovy's website
+author:
+  name: anchovy
 description: a funny and creative description
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
