--- a/_config.yml
+++ b/_config.yml
@@ -61,8 +61,11 @@ giscus:
   category: "chat"
   category-id: "DIC_kwDOIgc8ec4CTXua"
   mapping: "pathname"
+  strict: "0"
   reactions-enabled: "1"
-  theme: "light"
-  cross-origin: "anonymous"
+  emit-metadata: "0"
   input-position: "top"
+  theme: "light"
+  lang: "en"
   loading: "lazy"
+  cross-origin: "anonymous"
