--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ plugins:
 header_pages:
   - about.md
   - blog.md
+  - faq.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
