--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,8 @@ header_pages:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+date_format: "%b %-d, %Y"
  
 giscus:
   repo: anchovydev/anchovydev.github.io
